# bobert-2.0

./: .breakpoints  Advice.py  LICENSE  Langs.py  README.md  Sites.py  imports.py  main.py  pyproject.toml  sample.json  ticket_configs.txt  weather.py
Cogs/: Confess.py  Fun.py  Games.py  Info.py  Mod.py  Ticket.py  Utils.py  Welcome.py
cogs/: confess.py  fun.py  games.py  info.py  mod.py  ticket.py  utils.py  welcome.py
core/: config.py
core/utils/: check.py  db.py
databases/: ticket.json
